--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/i18n": "^8.3.1",
     "nuxt": "^3.12.4",
     "nuxt-i18n": "^6.28.1",
     "vue": "latest"
