--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/content": "^3.0.0",
     "@nuxtjs/i18n": "^8.3.1",
     "nuxt": "^3.12.4",
     "nuxt-i18n": "^6.28.1",
