--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/content": "^3.0.0",
+    "@mdi/font": "^7.4.47",
+    "@nuxt/content": "^3.1.0",
     "@nuxtjs/i18n": "^8.3.1",
     "nuxt": "^3.12.4",
     "nuxt-i18n": "^6.28.1",
@@ -23,6 +24,8 @@
     "@nuxtjs/tailwindcss": "^6.12.1",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.6"
+    "tailwindcss": "^3.4.6",
+    "vite-plugin-vuetify": "^2.1.0",
+    "vuetify": "^3.7.12"
   }
 }
