--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxt/content": "^3.3.0",
+    "@nuxtjs/i18n": "^9.5.4",
     "@tailwindcss/typography": "^0.5.16",
     "nuxt": "^3.15.4",
     "uuid": "^10.0.0",
